# alphalcazar

./: README.md  configurable_game.py  display_game.py  game_analysis.py  persist_transpositions.py  profiling.py  random_game.py  requirements.txt  strategic_game.py
.github/workflows/: alphalcazar.yml  python-app.yml
cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
cpp/src/: CMakeLists.txt
cpp/src/benchmarks/: CMakeLists.txt
cpp/src/benchmarks/minmax/: CMakeLists.txt  main.cpp
cpp/src/game/: Board.cpp  Board.hpp  CMakeLists.txt  Coordinates.cpp  Coordinates.hpp  Game.cpp  Game.hpp  Piece.cpp  Piece.hpp  PlacementMove.cpp  PlacementMove.hpp  Player.cpp  Player.hpp  Strategy.hpp  Tile.cpp  Tile.hpp  aliases.hpp  board_utils.hpp  parameters.hpp
cpp/src/game/include/game/: Board.hpp  Coordinates.hpp  Game.hpp  Piece.hpp  PlacementMove.hpp  Strategy.hpp  Tile.hpp  aliases.hpp  board_utils.hpp  parameters.hpp
cpp/src/game/src/game/: Board.cpp  Coordinates.cpp  Game.cpp  Piece.cpp  PlacementMove.cpp  Tile.cpp  safety_checks.hpp
cpp/src/game/tests/: Board.cpp  CMakeLists.txt  Game.cpp  board_utils.cpp  testhelpers.cpp  testhelpers.hpp
cpp/src/main/: CMakeLists.txt  main.cpp
cpp/src/shared/util/: CMakeLists.txt  CallbackHandler.hpp  Log.cpp  ThreadPool.cpp  ThreadPool.hpp
cpp/src/strategies/: CMakeLists.txt
cpp/src/strategies/minmax/: BoardEvaluation.cpp  BoardEvaluation.hpp  CMakeLists.txt  LegalMovements.cpp  LegalMovements.hpp  MinMaxStrategy.cpp  MinMaxStrategy.hpp  config.hpp
cpp/src/strategies/minmax/include/minmax/: BoardEvaluation.hpp  LegalMovements.hpp  MinMaxStrategy.hpp  TranspositionCache.hpp  config.hpp  minmax_aliases.hpp
cpp/src/strategies/minmax/src/minmax/: BoardEvaluation.cpp  LegalMovements.cpp  MinMaxStrategy.cpp  TranspositionCache.cpp  TranspositionCache.hpp
cpp/src/strategies/minmax/tests/: BoardEvaluation.cpp  CMakeLists.txt  LegalMovements.cpp  MinMaxStrategy.cpp  TranspositionCache.cpp  setuphelpers.cpp  setuphelpers.hpp
cpp/src/strategies/random/: CMakeLists.txt  RandomStrategy.cpp  RandomStrategy.hpp
cpp/src/strategies/random/include/random/: RandomStrategy.hpp
cpp/src/strategies/random/src/random/: RandomStrategy.cpp
cpp/src/strategies/random/tests/: CMakeLists.txt  RandomStrategy.cpp
cpp/src/ui/: CMakeLists.txt  main.cpp
cpp/src/ui/src/: Application.cpp  Application.hpp  BoardView.cpp  BoardView.hpp  PlayGameView.cpp  PlayGameView.hpp  PlayerHandView.cpp  PlayerHandView.hpp
cpp/src/ui/src/fonts/: FontManager.cpp  FontManager.hpp
cpp/src/ui/src/utils/: ImguiCoordinateConverters.cpp  ImguiCoordinateConverters.hpp  ImguiDrawers.cpp  ImguiDrawers.hpp
cpp/src/util/: CMakeLists.txt
cpp/src/util/include/util/: CallbackHandle.hpp  CallbackHandler.hpp  Log.hpp  StaticVector.hpp  ThreadPool.hpp  hash.hpp
cpp/src/util/src/util/: Log.cpp  ThreadPool.cpp
cpp/src/util/tests/: CMakeLists.txt  StaticVector.cpp
docs/: CONTRIBUTING.md  RULES.md  VARIANTS.md
game/: board.py  constants.py  enums.py  game.py  piece.py  player.py  tile.py
python_deprecated/: .gitignore  README.md  display_game.py  game_analysis.py  requirements.txt
python_deprecated/game/: board.py  game.py  placement_move.py  player.py  tile.py
python_deprecated/strategies/tree_search/: abstract_move.py  board_evaluation.py  min_max.py  persistence.py  strategy.py
python_deprecated/tests/game/: test_piece.py  test_serialization.py
python_deprecated/tests/strategies/random/: test_random_games.py
python_deprecated/tests/strategies/tree_search/: test_abstract_movements.py  test_tree_search.py
strategies/human_input/: strategy.py
strategies/random/: strategy.py
strategies/tree_search/: abstract_move.py  board_evaluation.py  config.py  min_max.py  multiprocessing.py  persistence.py  scored_move.py  strategy.py  transposition.py
strategies/ui_input/: strategy.py
tests/: test_board_movements.py  test_game.py
tests/game/: test_board.py  test_board_movements.py  test_game.py  test_piece.py  test_placement_move.py  test_serialization.py
tests/strategies/random/: test_random_games.py
tests/strategies/tree_search/: test_abstract_movements.py  test_board_evaluation.py  test_filter_symmetric_movements.py  test_transposition.py  test_tree_search.py  utils.py
tests/tree_search_strategy/: test_board_evaluation.py  test_tree_search.py
tree_search_strategy/: board_evaluation.py  config.py  scored_move.py  strategy.py
ui/: constants.py  display.py  selectables.py
